[BUGFIX] fix javascript variable update_country in template
Resolves: #228

--- a/Resources/Private/Templates/Cart/Cart/Show.html
+++ b/Resources/Private/Templates/Cart/Cart/Show.html
@@ -27,7 +27,7 @@
                     <f:render partial="Cart/OrderForm" arguments="{_all}"/>
 
                     <script type="text/javascript">
-                        var update_country = '<f:format.raw><f:uri.action controller"Cart\Country" action="update" pageType="2278001"/></f:format.raw>';
+                        var update_country = '<f:format.raw><f:uri.action controller="Cart\Country" action="update" pageType="2278001"/></f:format.raw>';
                     </script>
                 </f:then>
                 <f:else>
