[BUGFIX] Fix cart order form template
Resolves: #235

--- a/Resources/Private/Partials/Cart/OrderForm.html
+++ b/Resources/Private/Partials/Cart/OrderForm.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-8 col-lg-8 clear-padding">
-            <div>
+            <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <f:if condition="{settings.showCartAction.showPartials.shippingMethodForm}">
                         <f:render partial="Cart/OrderForm/ShippingMethod" arguments="{cart:cart, shippings:shippings}"/>
