[BUGFIX] Fix icon for close action in order module detail view
Resolves: #244

--- a/Resources/Private/Backend/Partials/Order/Show/Actions.html
+++ b/Resources/Private/Backend/Partials/Order/Show/Actions.html
@@ -6,7 +6,7 @@
     <a class="btn btn-default btn-sm"
        href="{f:uri.action(action:'list')}"
        title="{f:translate(key: 'tx_cart.controller.order.action.list')}">
-        <core:icon identifier="actions-document-close" />
+        <core:icon identifier="actions-close" />
     </a>
 
     <f:if condition="{0: orderItem.orderNumber} == {0: ''}">
