--- a/Resources/Private/Partials/Cart/ProductForm.html
+++ b/Resources/Private/Partials/Cart/ProductForm.html
@@ -31,7 +31,7 @@
                             <f:translate key="tx_cart_domain_model_cart_product.title"/>
                         </th>
                         <th class="col-md-2 text-right">
-                            <f:translate key="tx_cart_domain_model_cart_product.price_pre_unit_net"/>
+                            <f:translate key="tx_cart_domain_model_cart_product.price_per_unit_net"/>
                         </th>
                         <th class="col-md-1">
                             <f:translate key="tx_cart_domain_model_cart_product.count"/>
