--- a/Resources/Private/Templates/Cart/Country/Update.html
+++ b/Resources/Private/Templates/Cart/Country/Update.html
@@ -4,4 +4,5 @@
 <f:render partial="Cart/OrderForm/ShippingMethod" arguments="{cart:cart, shippings:shippings}"/>
 <f:render partial="Cart/OrderForm/PaymentMethod" arguments="{cart:cart, payments:payments}"/>
 <f:render partial="Cart/OrderForm/Summary" arguments="{cart:cart}"/>
+<f:render partial="Cart/ProductForm" arguments="{cart:cart}"/>
 </html>
