[BUGFIX] Update product in new backend variants
Set the correct product for new backend variants
when they added to cart. Changing the taxClasses
affect all backend variants.

Resolves: #256

--- a/Resources/Private/Templates/Cart/UpdateCountry.html
+++ b/Resources/Private/Templates/Cart/UpdateCountry.html
@@ -10,5 +10,6 @@
     </colgroup>
     <tbody>
         <f:render partial="Cart/OrderForm/Summary" arguments="{cart:cart}"/>
+        <f:render partial="Cart/ProductForm" arguments="{cart:cart}"/>
     </tbody>
 </table>
