[BUGFIX] Add pluginName to Form
Related: #288

--- a/Resources/Private/Partials/Cart/CurrencyForm.html
+++ b/Resources/Private/Partials/Cart/CurrencyForm.html
@@ -4,6 +4,7 @@
 <f:if condition="{settings.currencies -> f:count()} > 1">
     <f:form class="form form-currency"
             name="currency"
+            pluginName="Cart"
             controller="Cart\Currency"
             action="update"
             pageType="2278001"
