--- a/Resources/Private/Partials/Mail/Cart.html
+++ b/Resources/Private/Partials/Mail/Cart.html
@@ -4,25 +4,23 @@
 <table width="600" style="width: 100%; border-collapse: collapse; font-family: Arial, Helvetica, sans-serif; font-size:12px;" border="1">
     <colgroup>
         <col span="2"/>
-        <col width="1"/>
-        <col width="1"/>
-        <col width="1"/>
+        <col width="90"/>
+        <col width="90"/>
+        <col width="90"/>
     </colgroup>
     <thead>
     <tr class="first last" style="background-color:#2d4554; color:#fff;">
-        <th rowspan="1" height="34" colspan="2" valign="center" style="text-align: left; padding: 0 10px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 12px; border: none;">
-            <f:translate key="tx_cart_domain_model_order_product.title"/>
+        <th colspan="2" rowspan="1" height="34" valign="center" style="text-align: left; padding: 0 10px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 12px; border: none;">
+            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.title"/>
         </th>
         <th colspan="1" height="34" class="a-center" valign="center" style="padding: 0 10px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 12px; border: none;">
-            <f:translate key="tx_cart_domain_model_order_product.price"/>
+            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.price"/>
         </th>
-
-        <th rowspan="1" height="34" class="a-center" valign="center" style="padding: 0 10px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 12px; border: none;">
-            <f:translate key="tx_cart_domain_model_order_product.count"/>
-        </th>
-
         <th colspan="1" height="34" class="a-center" valign="center" style="padding: 0 10px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 12px; border: none;">
-            <f:translate key="tx_cart_domain_model_order_product.price_total"/>
+            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.count"/>
+        </th>
+        <th colspan="1" height="34" class="a-center" valign="center" style="padding: 0 10px; margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 12px; border: none;">
+            <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.price_total"/>
         </th>
     </tr>
     </thead>
