--- a/Resources/Private/Partials/Mail/Header.html
+++ b/Resources/Private/Partials/Mail/Header.html
@@ -2,11 +2,11 @@
       data-namespace-typo3-fluid="true">
 
 <p style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
-    <f:translate key="tx_cart.mail.salutation" arguments="{0: orderItem.billingAddress.salutationOrTitleLastName}"/>
+    <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart.mail.salutation" arguments="{0: orderItem.billingAddress.salutationOrTitleLastName}"/>
 </p>
 
 <p style="font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
-    <b><f:translate key="tx_cart.mail.thank_you_for_order" /></b> <f:translate key="tx_cart.mail.thank_you_for_order_note" />
+    <b><f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart.mail.thank_you_for_order" /></b> <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart.mail.thank_you_for_order_note" />
 </p>
 
 <f:cObject typoscriptObjectPath="lib.cartMailHeader" />
