--- a/Resources/Private/Partials/Mail/TaxList.html
+++ b/Resources/Private/Partials/Mail/TaxList.html
@@ -6,7 +6,7 @@
     <tr>
         <td colspan="4" style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
             <cart:traversable.extract key="{tax_key}" content="{taxClasses}" as="taxClass">
-                <f:translate key="tx_cart.tax_vat.value" arguments="{0: taxClass.value}"/>
+                <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart.tax_vat.value" arguments="{0: taxClass.value}"/>
             </cart:traversable.extract>
         </td>
         <td style="padding: 5px 10px; margin: 0; text-align: right; font-family: Arial, Helvetica, sans-serif; font-size: 12px;">
