--- a/Resources/Private/Templates/Mail/Paid/Buyer.html
+++ b/Resources/Private/Templates/Mail/Paid/Buyer.html
@@ -1,9 +1,10 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
-<f:layout name="Mail"/>
-
-<f:section name="main">
+<f:layout name="SystemEmail" />
+<f:section name="Title"><f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart.mail.buyer.subject" arguments="{0: orderItem.orderNumber}" /></f:section>
+<f:section name="Subject"><f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart.mail.buyer.subject" arguments="{0: orderItem.orderNumber}" /></f:section>
+<f:section name="Main">
     <f:render partial="Mail/Header" arguments="{_all}"/>
 
     <f:render partial="Mail/OrderInformation" arguments="{_all}"/>
