[TASK] Switch from jQuery to vanilla JavaScript

--- a/Resources/Private/Partials/Cart/CouponForm.html
+++ b/Resources/Private/Partials/Cart/CouponForm.html
@@ -1,6 +1,7 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
+<f:asset.script identifier="prevent-multi-submit" src="EXT:cart/Resources/Public/JavaScript/prevent_multi_submit.js" />
 <f:form id="form-coupon" class="form"
         name="couponItem"
         controller="Cart\Coupon"
