--- a/Resources/Private/Partials/Cart/OrderForm/ShippingMethod.html
+++ b/Resources/Private/Partials/Cart/OrderForm/ShippingMethod.html
@@ -2,6 +2,8 @@
       xmlns:cart="http://typo3.org/ns/Extcode/Cart/ViewHelpers"
       data-namespace-typo3-fluid="true">
 
+<f:asset.script identifier="update-payment-shipping" src="EXT:cart/Resources/Public/JavaScript/update_payment_shipping.js" />
+
 <div id="checkout-step-shipping-method" class="checkout-step bg-light-grey bottom-buffer">
     <h5 class="checkout-step-title">
         <span class="checkout-step-number"></span>
