--- a/Resources/Private/Templates/Cart/Cart/ShowStep4.html
+++ b/Resources/Private/Templates/Cart/Cart/ShowStep4.html
@@ -5,6 +5,7 @@
 
 <f:section name="main">
     <f:flashMessages/>
+    <f:asset.script identifier="prevent-multi-submit" src="EXT:cart/Resources/Public/JavaScript/prevent_multi_submit.js" />
 
     <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 column">
