--- a/Resources/Private/Templates/Cart/Cart/ShowStep2.html
+++ b/Resources/Private/Templates/Cart/Cart/ShowStep2.html
@@ -5,7 +5,7 @@
 
 <f:section name="main">
     <f:flashMessages/>
-
+    <f:asset.script identifier="prevent-multi-submit" src="EXT:cart/Resources/Public/JavaScript/prevent_multi_submit.js" />
     <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 column">
             <f:form id="form-order" class="form"
@@ -20,20 +20,6 @@
                         <div class="column">
                             <f:render partial="Cart/OrderForm/Address/Billing" arguments="{cart:cart, billingAddress:billingAddress}"/>
                             <f:if condition="{settings.showCartAction.showPartials.shippingAddressForm}">
-                                <div class="form-list shipping-same-as-billing-wrapper">
-                                    <div class="control">
-                                        <label for="shipping-same-as-billing">
-                                            <f:form.checkbox property="shippingSameAsBilling"
-                                                             id="shipping-same-as-billing"
-                                                             value="{f:if(condition:'{cart.shippingSameAsBilling}', then: 'true', else: 'false')}"
-                                                             title="{f:translate(key:'tx_cart.same_address')}"
-                                                             additionalAttributes="{f:if(condition:'{cart.shippingSameAsBilling}', then: '{checked: \'checked\'}')}"/>
-                                            <span>
-                                                <f:translate key="tx_cart.same_address"/>
-                                            </span>
-                                        </label>
-                                    </div>
-                                </div>
                                 <f:render partial="Cart/OrderForm/Address/Shipping" arguments="{cart:cart, shippingAddress:shippingAddress}"/>
                             </f:if>
                         </div>
@@ -70,8 +56,5 @@
             </f:form>
         </div>
     </div>
-    <script type="text/javascript">
-        var update_country = '<f:format.raw><f:uri.action controller="Cart\Country" action="update" pageType="2278001"/></f:format.raw>';
-    </script>
 </f:section>
 </html>
