[BUGFIX] Customer always gets correct shipping
If shipping costs differs between two countries
the customer could get wrong shipping costs by
choosing another country in the shipping address
and afterwards checking the checkbox "shipping
is same as billing".

This is fixed by using the billing country for the
shipping costs when the customer chooses "shipping
is same as billing".

Furthermore the checkbox is always correct checked
by augmenting the condition. Before the checkbox was
not check on first load but the shipping address
fields were not shown.

Solves #363

--- a/Resources/Private/Partials/Cart/OrderForm/Address/Shipping.html
+++ b/Resources/Private/Partials/Cart/OrderForm/Address/Shipping.html
@@ -12,7 +12,7 @@
                              id="shipping-same-as-billing"
                              value="1"
                              title="{f:translate(key:'tx_cart.same_address')}"
-                             checked="{f:if(condition:'{cart.shippingSameAsBilling}')}"/>
+                             checked="{f:if(condition:'{cart.shippingSameAsBilling}', then: 'true', else: 'false')}"/>
             <span><f:translate key="tx_cart.same_address"/></span>
         </label>
     </div>
